# fastapi-crud

./: Dockerfile  compose.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 666dacf659c2_added_notes_table.py  bbf3da6949ad_added_notes_table.py  e6fb9c26b926_added_notes_table.py  f51e55258e8e_added_notes_table.py
app/: config.py  dependencies.py  main.py
app/crud/: notes.py
app/models/: __init__.py  base.py  notes.py
app/routers/: notes.py  ping.py
app/schemas/: notes.py
app/sql/: db.py  models.py
src/app/: main.py
tests/: conftest.py  test_main.py  test_ping.py
